command-runner-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
  namespace: default
spec:
  containers:
  - name: test-container
    image: busybox:latest
    command: ["sleep", "infinity"]
# Testing pod
# kubectl run -it test-pod --image=busybox
# Run nslookup random-generator-1/2/0.random-generator.default.svc.cluster.local
# Then run in kube terminal kubectl logs test-pod > $HOME/k8s_sts.txt
