command-runner.yml
apiVersion: v1
kind: Pod
metadata:
  name: command-runner
spec:
  containers:
    - name: busybox
      image: busybox:1.28
      command:
        - |
          wget -q -O- pod-info-svc
          nslookup pod-info-svc
