envtest.yml
apiVersion: v1
kind: Pod
metadata:
  name: envtest
  namespace: default
spec:
  containers:
  - name: envtest
    image: busybox:1.34
    command: ["sh", "-c", "env && sleep infinity"]
