myapp.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: greg-app
  labels:
    task: deploy
    app: greg-app
    student: greg
spec:
  replicas: 1
  selector:
    matchLabels:
      deploy: greg-app
  template:
    metadata:
      labels:
        deploy: greg-app
        kind: redis
        role: master
        tier: db
    spec:
      containers:
      - name: redis-master
        image: redis:5-alpine
        ports:
        - containerPort: 6379
