random-statfulSet.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: random-generator
  namespace: default
  labels:
    app: random-generator
spec:
  serviceName: "random-generator"
  replicas: 3
  selector:
    matchLabels:
      app: random-generator
  template:
    metadata:
      labels:
        app: random-generator
    spec:
      containers:
      - name: random-generator
        image: sbeliakou/random-generator:1
        ports:
        - containerPort: 80
