redis-pod.yml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: "2024-12-25T20:50:48Z"
  labels:
    run: redis
  name: redis
  namespace: default
  resourceVersion: "87681"
  uid: adf18696-1332-46d8-b9e5-49471d2236d8
spec:
  containers:
  - image: redis:5-alpine
    imagePullPolicy: IfNotPresent
    name: redis
    resources: {}
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
    volumeMounts:
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: kube-api-access-2rsb7
      readOnly: true
  dnsPolicy: ClusterFirst
  enableServiceLinks: true
  nodeName: minikube
  preemptionPolicy: PreemptLowerPriority
  priority: 0
  restartPolicy: Never
  schedulerName: default-scheduler
  securityContext: {}
  serviceAccount: default
  serviceAccountName: default
  terminationGracePeriodSeconds: 30
  tolerations:
  - effect: NoExecute
    key: node.kubernetes.io/not-ready
    operator: Exists
    tolerationSeconds: 300
  - effect: NoExecute
    key: node.kubernetes.io/unreachable
    operator: Exists
    tolerationSeconds: 300
  volumes:
  - name: kube-api-access-2rsb7
    projected:
      defaultMode: 420
      sources:
      - serviceAccountToken:
          expirationSeconds: 3607
          path: token
      - configMap:
          items:
          - key: ca.crt
            path: ca.crt
          name: kube-root-ca.crt
      - downwardAPI:
          items:
          - fieldRef:
              apiVersion: v1
              fieldPath: metadata.namespace
            path: namespace
status:
  conditions:
  - lastProbeTime: null
    lastTransitionTime: "2024-12-25T20:50:50Z"
    status: "True"
    type: PodReadyToStartContainers
  - lastProbeTime: null
    lastTransitionTime: "2024-12-25T20:50:48Z"
    status: "True"
    type: Initialized
  - lastProbeTime: null
    lastTransitionTime: "2024-12-25T20:50:48Z"
    message: 'containers with unready status: [redis]'
    reason: ContainersNotReady
    status: "False"
    type: Ready
  - lastProbeTime: null
    lastTransitionTime: "2024-12-25T20:50:48Z"
    message: 'containers with unready status: [redis]'
    reason: ContainersNotReady
    status: "False"
    type: ContainersReady
  - lastProbeTime: null
    lastTransitionTime: "2024-12-25T20:50:48Z"
    status: "True"
    type: PodScheduled
  containerStatuses:
  - image: redis:123
    imageID: ""
    lastState: {}
    name: redis
    ready: false
    restartCount: 0
    started: false
    state:
      waiting:
        message: Back-off pulling image "redis:123"
        reason: ImagePullBackOff
    volumeMounts:
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: kube-api-access-2rsb7
      readOnly: true
      recursiveReadOnly: Disabled
  hostIP: 192.168.49.2
  hostIPs:
  - ip: 192.168.49.2
  phase: Pending
  podIP: 10.244.0.70
  podIPs:
  - ip: 10.244.0.70
  qosClass: BestEffort
  startTime: "2024-12-25T20:50:48Z"
