rgys-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: red-color
  labels:
    color: red
spec:
  replicas: 3
  selector:
    matchLabels:
      color: red
  template:
    metadata:
      labels:
        color: red
    spec:
      containers:
      - name: red-color
        image: sbeliakou/color:v1
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: green-color
  labels:
    color: green
spec:
  replicas: 1
  selector:
    matchLabels:
      color: green
  template:
    metadata:
      labels:
        color: green
    spec:
      containers:
      - name: green-color
        image: sbeliakou/color:v1
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yellow-color
  labels:
    color: yellow
spec:
  replicas: 2
  selector:
    matchLabels:
      color: yellow
  template:
    metadata:
      labels:
        color: yellow
    spec:
      containers:
      - name: yellow-color
        image: sbeliakou/color:v1
        ports:
        - containerPort: 80
