web-pod.yml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Pod","metadata":{"annotations":{},"labels":{"name":"web"},"name":"web","namespace":"trouble"},"spec":{"containers":[{"image":"nginxxx","name":"web","ports":[{"containerPort":80}]}]}}
  creationTimestamp: "2024-12-24T05:14:43Z"
  labels:
    name: web
  name: web
  namespace: trouble
  resourceVersion: "79911"
  uid: 35180254-2196-4797-9f36-b5ad2a441ce5
spec:
  containers:
  - image: nginx:1.19-alpine
    imagePullPolicy: Always
    name: web
    ports:
    - containerPort: 80
      protocol: TCP
    resources: {}
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
    volumeMounts:
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: kube-api-access-fv95r
      readOnly: true
  dnsPolicy: ClusterFirst
  enableServiceLinks: true
  nodeName: minikube
  preemptionPolicy: PreemptLowerPriority
  priority: 0
  restartPolicy: Always
  schedulerName: default-scheduler
  securityContext: {}
  serviceAccount: default
  serviceAccountName: default
  terminationGracePeriodSeconds: 30
  tolerations:
  - effect: NoExecute
    key: node.kubernetes.io/not-ready
    operator: Exists
    tolerationSeconds: 300
  - effect: NoExecute
    key: node.kubernetes.io/unreachable
    operator: Exists
    tolerationSeconds: 300
  volumes:
  - name: kube-api-access-fv95r
    projected:
      defaultMode: 420
      sources:
      - serviceAccountToken:
          expirationSeconds: 3607
          path: token
      - configMap:
          items:
          - key: ca.crt
            path: ca.crt
          name: kube-root-ca.crt
      - downwardAPI:
          items:
          - fieldRef:
              apiVersion: v1
              fieldPath: metadata.namespace
            path: namespace
status:
  conditions:
  - lastProbeTime: null
    lastTransitionTime: "2024-12-25T17:11:44Z"
    status: "True"
    type: PodReadyToStartContainers
  - lastProbeTime: null
    lastTransitionTime: "2024-12-24T05:14:43Z"
    status: "True"
    type: Initialized
  - lastProbeTime: null
    lastTransitionTime: "2024-12-24T05:14:43Z"
    message: 'containers with unready status: [web]'
    reason: ContainersNotReady
    status: "False"
    type: Ready
  - lastProbeTime: null
    lastTransitionTime: "2024-12-24T05:14:43Z"
    message: 'containers with unready status: [web]'
    reason: ContainersNotReady
    status: "False"
    type: ContainersReady
  - lastProbeTime: null
    lastTransitionTime: "2024-12-24T05:14:43Z"
    status: "True"
    type: PodScheduled
  containerStatuses:
  - image: nginxxx
    imageID: ""
    lastState: {}
    name: web
    ready: false
    restartCount: 0
    started: false
    state:
      waiting:
        message: Back-off pulling image "nginxxx"
        reason: ImagePullBackOff
    volumeMounts:
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: kube-api-access-fv95r
      readOnly: true
      recursiveReadOnly: Disabled
  hostIP: 192.168.49.2
  hostIPs:
  - ip: 192.168.49.2
  phase: Pending
  podIP: 10.244.0.41
  podIPs:
  - ip: 10.244.0.41
  qosClass: BestEffort
  startTime: "2024-12-24T05:14:43Z"
