color-services.yml
apiVersion: v1
kind: Service
metadata:
  name: aqua-svc
spec:
  selector:
    color: aqua  # Match pods with this label (from your deployment)
  ports:
  - protocol: TCP   # You'll likely want TCP
    port: 80        # The port your service exposes
    targetPort: 80 # The port your application is listening on within the pod
---
apiVersion: v1
kind: Service
metadata:
  name: maroon-svc
spec:
  selector:
    color: maroon
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: olive-svc
spec:
  selector:
    color: olive
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
