default-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: sorry-page-service
  namespace: ingress-default-backend
spec:
  selector:
    app: sorry
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
