hello-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-hello-service
spec:
  type: NodePort
  selector:
    app: hello-hello
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30300
