pod-info-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: pod-info-svc
spec:
  type: ClusterIP
  selector:
    app: podInfoApp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
