rgys-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: red-svc
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    color: red
---
apiVersion: v1
kind: Service
metadata:
  name: green-svc
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    color: green
---
apiVersion: v1
kind: Service
metadata:
  name:  yellow-svc
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    color:  yellow
---
apiVersion: v1
kind: Service
metadata:
  name: switch
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    tier: color
