color-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aqua-ingress
spec:
  rules:
    - host: aqua.k8slab.net
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: aqua-svc
              port:
                number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: maroon-ingress
spec:
  rules:
    - host: maroon.k8slab.net
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: maroon-svc
              port:
                number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: olive-ingress
spec:
  rules:
    - host: olive.k8slab.net
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: olive-svc
              port:
                number: 8080
